--- a/static/css/style.cadastro.css
+++ b/static/css/style.cadastro.css
@@ -1,10 +1,11 @@
+
 * {
   margin: 0;
   padding: 0;
 }
 .form-cad {
   background-color: #5d5b6d;
-  width: 80%;
+  width: 95%;
   height: 90%;
   position: relative;
   top: 50%;
@@ -28,8 +29,8 @@
   background: transparent;
   border: 0px;
   position: absolute;
-  top: 8px;
-  left: 92%;
+  top: 9px;
+  left: 94%;
   width: 35px;
   height: 35px;
 }
@@ -53,10 +54,11 @@
 .input-group-pnome {
   position: absolute;
   top: 22%;
-  left: 6%;
+  left: 0%;
+  margin: 10px;
 }
 .input-pnome {
-  width: 200px;
+  width: 370px;
   border: solid 1.5px #9e9e9e;
   border-radius: 1rem;
   background: none;
@@ -91,10 +93,11 @@ input:valid~label {
 .input-group-snome {
   position: absolute;
   top: 22%;
-  left: 35%;
+  left: 47%;
+  margin: 10px;
 }
 .input-snome {
-  width: 200px;
+  width: 370px;
   border: solid 1.5px #9e9e9e;
   border-radius: 1rem;
   background: none;
@@ -133,7 +136,7 @@ input:valid~label {
   margin: 10px;
 }
 .input-email {
-  width: 442px;
+  width: 800px;
   border: solid 1.5px #9e9e9e;
   border-radius: 1rem;
   background: none;
@@ -172,7 +175,7 @@ input:valid~label {
   margin: 10px;
 }
 .input-senha1 {
-  width: 442px;
+  width: 800px;
   border: solid 1.5px #9e9e9e;
   border-radius: 1rem;
   background: none;
@@ -211,7 +214,7 @@ input:valid~label {
   margin: 10px;
 }
 .input-senha2 {
-  width: 442px;
+  width: 800px;
   border: solid 1.5px #9e9e9e;
   border-radius: 1rem;
   background: none;
@@ -246,7 +249,8 @@ input:valid~label {
 .btn-submit {
   position: absolute;
   top: 80%;
-  left: 45%;
+  left: 50%;
+  transform: translate(-50%, -80%);
   padding: 1.3em 3em;
   font-size: 12px;
   text-transform: uppercase;
@@ -265,107 +269,15 @@ input:valid~label {
   background-color: #1fa36e;
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
   color: rgb(255, 255, 255);
-  transform: translateY(-7px);
-}
-.btn-submit:active {
-  transform: translateY(-1px);
 }
 /*--------------------------------------------------------------------------------------------------------------------------*/
-@media(max-width: 1920px){
-  .input-group-pnome {
-    position: absolute;
-    top: 24%;
-    left: 6%;
-  }
-  .input-pnome {
-    width: 280px;
-    border: solid 1.5px #9e9e9e;
-    border-radius: 1rem;
-    background: none;
-    padding: 1rem;
-    font-size: 1rem;
-    color: #f5f5f5;
-    transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  /*------------------------------------------------------------------------*/
+@media(max-width: 1024px){
   .input-group-snome {
-    position: absolute;
-    top: 24%;
-    left: 52%;
-  }
-  .input-snome {
-    width: 280px;
-    border: solid 1.5px #9e9e9e;
-    border-radius: 1rem;
-    background: none;
-    padding: 1rem;
-    font-size: 1rem;
-    color: #f5f5f5;
-    transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  /*------------------------------------------------------------------------*/
-  .input-group-email {
-    position: absolute;
-    top: 32%;
-    left: 4.7%;
-  }
-  .input-email {
-    width: 633px;
-    border: solid 1.5px #9e9e9e;
-    border-radius: 1rem;
-    background: none;
-    padding: 1rem;
-    font-size: 1rem;
-    color: #f5f5f5;
-    transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  /*------------------------------------------------------------------------*/
-  .input-group-senha1 {
-    position: absolute;
-    top: 41%;
-    left: 4.7%;
-  }
-  .input-senha1 {
-    width: 633px;
-    border: solid 1.5px #9e9e9e;
-    border-radius: 1rem;
-    background: none;
-    padding: 1rem;
-    font-size: 1rem;
-    color: #f5f5f5;
-    transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  /*------------------------------------------------------------------------*/
-  .input-group-senha2 {
-    position: absolute;
-    top: 50%;
-    left: 4.7%;
-  }
-  .input-senha2 {
-    width: 633px;
-    border: solid 1.5px #9e9e9e;
-    border-radius: 1rem;
-    background: none;
-    padding: 1rem;
-    font-size: 1rem;
-    color: #f5f5f5;
-    transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  /*------------------------------------------------------------------------*/
-}
-@media(max-width: 1366px) {
-  .form-cad {
-    background-color: rgb(38, 0, 255);
-    width: 80%;
-    height: 90%;
-    position: relative;
-    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    margin: 10px;
   }
-  .input-group-pnome {
-    position: absolute;
-    top: 22%;
-    left: 2%;
+  .btn-submit{
+    top: 80%;
+    left: 37%;
   }
 }
