--- a/templates/index.Chat.html
+++ b/templates/index.Chat.html
@@ -19,27 +19,16 @@
             <a href="/indexes/cadratro/index.cadrastro.html" class="register">Cadastrar-se</a>
     </nav>
     <section class="chat" id="chat">
-        <div class="checkbox-wrapper-35">
-            <input value="private" name="switch" id="switch" type="checkbox" class="switch">
-            <label for="switch">
-                <span class="switch-x-text">O Chat está</span>
-                <span class="switch-x-toggletext">
-                    <span class="switch-x-unchecked"><span class="switch-x-hiddenlabel">Unchecked: </span>Off</span>
-                    <span class="switch-x-checked"><span class="switch-x-hiddenlabel">Checked: </span>On</span>
-                </span>
-            </label>
-        </div>
         <div class="telachat">
             <div class="messages" id="messages">
-                <p>aaaaaaaaaaaaaaaaaa</p>
                 <!-- As mensagens do chat vão aqui -->
             </div>
             <section class="input" id="input">
-                <button class="enviar" id="enviar"> > </button>
+                <button class="enviar"  onclick="sendMessage()">></button>
                 <textarea class="inputtxt" id="inputtxt" placeholder="Fale mais sobre seu projeto:" rows="1"></textarea>
             </section>
         </div>
     </section>
-    <script src="{{ url_for('static', filename='js/script.cadrastro.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.chat.js') }}"></script>
 </body>
 </html>
