--- a/templates/index.cadrastro.html
+++ b/templates/index.cadrastro.html
@@ -24,6 +24,7 @@
                     <h1 class="Cadastrese">Cadastre-se</h1>
                     <p class="text">Informe os dados abaixo e tenha total acessoa a nossa IA</p>
                     <a href="{{ url_for('chat') }}">link direto</a>
+                    <a href="{{ url_for('login') }}">link direto</a>
                 </center>
                 <div class="input-group-pnome">
                     <input autocomplete="name" required type="text" name="iptPnomeTcad" class="input-pnome">
