--- a/templates/index.login.html
+++ b/templates/index.login.html
@@ -15,9 +15,9 @@
 <body>
     <section class="left-panel">
         <div class="nav">
-            <a href="/indexes/Chat/index.Chat.html">Sobre nós</a>
+            <a href="{{ url_for('chat') }}">Sobre nós</a>
             <a href="index.html">Produtos</a>
-            <a href="/indexes/RecuperarSenha/Recupera1/Indexrecuperasenha.html">Cadastrar-se</a>
+            <a href="{{ url_for('cadrastro') }}">Cadastrar-se</a>
         </div>
         <img class="img" src="/Imgs Gerais/imgs/imagem de preenchimento.jpeg" alt="a">
     </section>
@@ -25,7 +25,7 @@
         <img class="logo" src="/Imgs Gerais/imgs/neguinmelancia.png" alt="Logo">
         <section class="loginform" id="loginform">
             <h1 class="login">Login</h1>
-            <form action="/indexes/Chat/index.Chat.html" method="POST">
+            <form action="{{ url_for('chat') }}" method="POST">
                 <div class="input-group">
                     <input autocomplete="current-password" required type="email" name="iptEmailLogin" class="input">
                     <label class="user-label">Email</label>
