--- a/templates/index.cadrastro.html
+++ b/templates/index.cadrastro.html
@@ -15,7 +15,7 @@
     -->
 </head>
 <body>
-    <form class="forn" action="/app.py" method="post">
+    <form class="forn" action="cadastrar" method="post">
         
         <div class="painelLateral">
             <section class="form-cad">
