--- a/templates/index.login.html
+++ b/templates/index.login.html
@@ -25,7 +25,7 @@
         <img class="logo" src="/Imgs Gerais/imgs/neguinmelancia.png" alt="Logo">
         <section class="loginform" id="loginform">
             <h1 class="login">Login</h1>
-            <form action="{{ url_for('chat') }}" method="POST">
+            <form action="Login" method="POST">
                 <div class="input-group">
                     <input autocomplete="current-password" required type="email" name="iptEmailLogin" class="input">
                     <label class="user-label">Email</label>
