Cadastro,PopUP de erro De senhas diferentes

--- a/templates/index.Hub.html
+++ b/templates/index.Hub.html
@@ -17,12 +17,16 @@
             <a href="{{ url_for('cadastrar') }}" class="register">Cadastrar-se</a>
         </div>
     </nav>
-        <div>
-
-            <h1 class="Inicio">
-                Bem-Vindo à Callista
-            </h1>
-            
+        <div class="container">
+            <div class="estatico">Eu Sou A Callista Ajudo</div>
+            <ul class="dinamico">
+                <li><span>Desenvolvedor</span></li>
+                <li><span>Engenheiro</span></li>
+                <li><span>Professor</span></li>
+                <li><span>Enfermeiro</span></li>
+                <li><span>Psiquiatra</span></li>
+                <li><span>Todos Os Alunos</span></li>
+            </ul>
         </div>
 
     <script src="{{ url_for('static', filename='js/script.hub.js') }}"></script>
