--- a/templates/index.cadrastro.html
+++ b/templates/index.cadrastro.html
@@ -15,7 +15,7 @@
     -->
 </head>
 <body>
-    <form class="forn" action="cadastrar" method="post">
+    <form class="forn" action="cadastrar" method="post" onsubmit="return VerificaSenha()">
         
         <div class="painelLateral">
             <section class="form-cad">
@@ -52,9 +52,9 @@
 
                     <input autocomplete="current-password" required type="password" id="olhoabertocad2" name="iptsenha2Tcad" class="input-senha2">
                     <label class="user-label-senha2">Repita a senha</label>
-                    <div class="SenhaIncorreta" id="VerificarSenhas"> <p class="Senhas" id="ConfereSenhas"></p> </div>
+                    <p id="mensagem"></p>
             </section>
-            <button type="submit" id="btnEntrarLOGIN" class="btn-submit" onclick="tclaEnter()">Entrar</button> 
+            <button type="submit" id="btnEntrarLOGIN" class="btn-submit" onclick="tclaEnter()" >Entrar</button> 
         </div>
     </form>
     <script src="{{ url_for('static', filename='js/script.cadrastro.js') }}"></script>
