--- a/templates/index.login.html
+++ b/templates/index.login.html
@@ -15,7 +15,7 @@
 <body>
     <section class="left-panel">
         <div class="nav">
-            <a href="{{ url_for('chat') }}">Sobre nós</a>
+            <a href="{{ url_for('sobrenos') }}">Sobre nós</a>
             <a href="{{ url_for('cadastrar') }}">Cadastrar-se</a>
         </div>
         <img class="img" src="/Imgs Gerais/imgs/imagem de preenchimento.jpeg" alt="a">
