--- a/static/css/style.hub.css
+++ b/static/css/style.hub.css
@@ -1,25 +1,93 @@
-
-
-
-
-
-
-body {
+* {
     margin: 0;
-    font-family: Arial, sans-serif;
-    background-image:url(/indexes/imgs/_81f62beb-08d0-4302-b909-f54f372aa505.jfif);
-    background-size: cover;
-    display: flex;
-    
+    padding: 0;
+    box-sizing: border-box;
 }
+
+body { 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background-color: rgb(108, 173, 230);  
+}
+
+.container {
+    display: inline-flex;   
+}
+
+.container .estatico {
+    color: black;
+    font-size: 60px;
+    font-weight: 400;
+}
+
+.container .dinamico {
+    margin-left: 15px;
+    line-height: 90px;
+    height: 90px;
+    color: red;
+    overflow: hidden;
+}
+
+.dinamico li {
+    color: black;
+    list-style: none;
+    font-size: 60px;
+    font-weight: 300;
+    left: 0;
+    position: relative;
+    top: 0;
+    animation: slide 15s steps(6) infinite;
+}
+
+@keyframes slide {
+    100% {
+        top: -540px; /* 6 items * 90px */
+    }
+}
+
+.dinamico li span::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    border-left: 2px solid black;
+    animation: typing 1.5s steps(15) 1 forwards, infinite 1.5s;
+    background: rgb(108, 173, 230);
+}
+
+.dinamico li span {
+    position: relative;
+}
+
+@keyframes typing {
+    100% {
+        left: 100%;
+        margin: 0 -35px 0 35px;
+    }
+}
+
+@keyframes blink {
+    50% {
+        border-color: transparent;
+    }
+}
+
+
+
+/* ----------------------------------------------------------------------------- Navegação -----------------------------------------------------------------------------------------------*/
+
 .navbar {
     position: relative;
     display: flex;
     justify-content: right;
-    align-items: center;
+    align-items: top;
     padding: 10px 20px;
     background: transparent;
-    left: 67%;
+    left: 43%;
+    top: -210px;
 }
 .navbar a {
     margin: 0 10px;
@@ -48,11 +116,6 @@ body {
     transition: width 0.5s ease-in-out;
   }
 
-  .Inicio{
-    position: absolute;
-    left: 42%;
-    top: 40%; 
-  }
 
   .navbar .element:hover::before {
     width: 100%;
