tudo certo graças a deus

--- a/templates/Index.recupera.senha.codigo.html
+++ b/templates/Index.recupera.senha.codigo.html
@@ -11,6 +11,11 @@
 
     <h1>Callista</h1>
 
+    <a class="element" href="{{ url_for('index') }}">HUB</a>
+    <a href="{{ url_for('login') }}" class="signin">Login</a>
+
+
+
     <div class="codigo">
         <h2>Recuperar Senha</h2>
         <form action="/RecuperarSenha/recupera3/RecuperaSenha3.html" method="post">
