--- a/templates/index.Chat.html
+++ b/templates/index.Chat.html
@@ -12,8 +12,8 @@
 <body>
     <nav class="navbar" id="navbar">
             <a class="element" href="{{ url_for('sobrenos') }}">Sobre nós</a>
-            <a href="{{ url_for('login') }}" class="signin">Login</a>
-            <a href="{{ url_for('cadastrar') }}" class="register">Cadastrar-se</a>
+            <a class="element" href="{{ url_for('index') }}">HUB</a>
+            
     </nav>
     <section class="chat" id="chat">
         <div class="telachat">
