--- a/templates/index.Hub.html
+++ b/templates/index.Hub.html
@@ -18,7 +18,7 @@
         </div>
     </nav>
         <div class="container">
-            <div class="estatico">Eu Sou A Callista Ajudo</div>
+            <div class="estatico">Eu Sou A Callisto Ajudo</div>
             <ul class="dinamico">
                 <li><span>Desenvolvedor</span></li>
                 <li><span>Engenheiro</span></li>
