--- a/templates/index.login.html
+++ b/templates/index.login.html
@@ -17,6 +17,7 @@
         <div class="nav">
             <a href="{{ url_for('sobrenos') }}">Sobre nós</a>
             <a href="{{ url_for('cadastrar') }}">Cadastrar-se</a>
+            <a class="element" href="{{ url_for('index') }}">HUB</a>
         </div>
         <img class="img" src="/Imgs Gerais/imgs/imagem de preenchimento.jpeg" alt="a">
     </section>
