--- a/static/css/style.chat.css
+++ b/static/css/style.chat.css
@@ -7,7 +7,8 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif; 
+    font-family: Arial, sans-serif;
+    background-color: #BFBE9C;
 }
 /*/------------------------------Gerais----------------------------------------*/
 /*----------------------------Navegação---------------------------------------*/
@@ -17,9 +18,10 @@ body {
     display: flex;
     justify-content: right;
     align-items: center;
-    padding: 20px 10px;
+    padding: 10px 10px;
     background: transparent;
     left: 0%;
+    gap: 10px;
 }
 
 .navbar a {
@@ -92,8 +94,8 @@ body {
     transform: translate(-50%, -0%);
     width: 50%;
     height: 800px;
-    background-color: #5D5B6D;
-    border: 3px solid #5D5B6D;
+    background-color: #004040;
+    border: 3px solid #004040;
     border-radius: 20px;
     overflow: hidden;
 }
@@ -117,7 +119,7 @@ body {
     height: 85%;
     overflow-y: auto; /* Permite rolagem vertical */
     padding: 10px;
-    background-color: #bd7e4b; /* Cor de fundo para as mensagens */
+    background-color: #4A4633; /* Cor de fundo para as mensagens */
     border-radius: 20px 20px 0 0; /* Bordas arredondadas na parte superior */
 }
 /* Estilo geral para todas as mensagens */
@@ -157,7 +159,7 @@ body {
     left: 0;
     width: 100%;
     height: 70px; /* Mantido */
-    background-color: #383741;
+    background-color:#004040;
     display: flex;
     align-items: center; /* Alinha os itens verticalmente ao centro */
     border-radius: 10px; /* Mantido */
@@ -198,7 +200,7 @@ body {
 }
 .enviar:hover {
     background: rgb(0, 0, 0);
-    border: 1px solid rgb(53, 53, 53);
+    border: 1px solid #4A4633;
     color: #fff;
 }
 /*/------------------------------Input < Btnenviar-----------------------------------------*/
